Modified to resolve URIs rather than URLs.  Enhanced the error checking for DOM URI resolution.