@@ -1,10 +1,10 @@
 package org.xbrlapi.xmlbase.tests;
 
 import java.io.StringReader;
-import java.net.URL;
+import java.net.URI;
 
-import org.xbrlapi.xmlbase.BaseURLSAXResolver;
-import org.xbrlapi.xmlbase.BaseURLSAXResolverImpl;
+import org.xbrlapi.xmlbase.BaseURISAXResolver;
+import org.xbrlapi.xmlbase.BaseURISAXResolverImpl;
 import org.xml.sax.Attributes;
 import org.xml.sax.InputSource;
 import org.xml.sax.XMLReader;
@@ -13,10 +13,10 @@ import org.xml.sax.helpers.XMLReaderFactory;
 /**
  * @author Geoffrey Shuetrim (geoff@galexy.net)
  */
-public class BaseURLSAXResolverImplTestCase extends BaseTestCase {
+public class BaseURISAXResolverImplTestCase extends BaseTestCase {
 	
 	private String xml;
-	private BaseURLSAXResolver baseURLResolver, nullBaseURLResolver;
+	private BaseURISAXResolver baseURIResolver, nullBaseURIResolver;
 
 	/*
 	 * @see TestCase#setUp()
@@ -34,8 +34,8 @@ public class BaseURLSAXResolverImplTestCase extends BaseTestCase {
 			+ "<my:child4 xml:base=\"\"/>"
 			+ "</my:root>";
 
-		baseURLResolver = new BaseURLSAXResolverImpl(new URL("http://www.xbrlapi.org/document.xml"));
-		nullBaseURLResolver = new BaseURLSAXResolverImpl();
+		baseURIResolver = new BaseURISAXResolverImpl(new URI("http://www.xbrlapi.org/document.xml"));
+		nullBaseURIResolver = new BaseURISAXResolverImpl();
 	}
 
 	/*
@@ -46,37 +46,37 @@ public class BaseURLSAXResolverImplTestCase extends BaseTestCase {
 	}
 
 	/**
-	 * Constructor for BaseURLDOMResolverImplTests.
+	 * Constructor for BaseURIDOMResolverImplTests.
 	 * @param arg0
 	 */
-	public BaseURLSAXResolverImplTestCase(String arg0) {
+	public BaseURISAXResolverImplTestCase(String arg0) {
 		super(arg0);
 	}
 
 	/**
-	 * Test the BaseURLSAXResolverImpl constructor.  
+	 * Test the BaseURISAXResolverImpl constructor.  
 	 * The constructor is too simple to break.
 	 */
-	public final void testBaseURLImpl() {
+	public final void testBaseURIImpl() {
 	}
 	
 	/**
 	 * Test SAX parser XML Base resolver
 	 */
-	public final void testSAXBaseURLResolution() throws Exception {
-        new BaseTestHandler(this,nullBaseURLResolver);
+	public final void testSAXBaseURIResolution() throws Exception {
+        new BaseTestHandler(this,nullBaseURIResolver);
 		XMLReader reader = XMLReaderFactory.createXMLReader("org.apache.xerces.parsers.SAXParser");
 		reader.setFeature("http://xml.org/sax/features/namespaces",true);
 		reader.parse(new InputSource(new StringReader(xml)));
 	}
 
-	protected final void checkSAXBaseURLHandling(String expected, Attributes attrs, String inheritedURL) {
+	protected final void checkSAXBaseURIHandling(String expected, Attributes attrs, String inheritedURI) {
 		try {
-			assertEquals(expected,baseURLResolver.getBaseURL());
+			assertEquals(expected,baseURIResolver.getBaseURI());
 			assertNotNull(attrs);
-            assertNotNull(inheritedURL);
+            assertNotNull(inheritedURI);
 		} catch (Exception e) {
-			fail("Unexpected Exception when testing SAX Base URL handling. " + e.getMessage());
+			fail("Unexpected Exception when testing SAX Base URI handling. " + e.getMessage());
 		}
 	}
 }
